fixing background img not showing

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -5,7 +5,7 @@
 
 body{
     font-family: 'Spartan';
-    background: url('../images/bg-pattern-top-mobile.svg'), url('../images/bg-pattern-bottom-mobile.svg');
+    background: url('../bg-pattern-top-mobile.svg'), url('../bg-pattern-bottom-mobile.svg');
     background-repeat: no-repeat, no-repeat;
     background-position:   top  left  , bottom right ;
     min-height: 100vh;
@@ -159,7 +159,7 @@ body{
 //Media Query
 @media (min-width:950px){
     body{
-        background: url('../images/bg-pattern-top-desktop.svg'), url('../images/bg-pattern-bottom-desktop.svg');
+        background: url('../bg-pattern-top-desktop.svg'), url('../bg-pattern-bottom-desktop.svg');
         background-repeat: no-repeat, no-repeat;
         background-position:   top  left  , bottom right ;
     }
